sfSandBoxCode/force-app/main/default/objects/HouseHold__c/HouseHold__c.object-meta.xml
<CustomObject>
    <description>Stores info on HouseHolds at Unilever</description>
    <label>HouseHold</label>
    <nameField>
        <label>HouseHold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HouseHolds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>