sfSandBoxCode/force-app/main/default/objects/HouseHold__c/fields/Adult_Dependents_At_Home__c.field-meta.xml
<CustomField>
    <fullName>Adult_Dependents_At_Home__c</fullName>
    <description>Number of Adult Dependents at home or not working</description>
    <label>Adult Dependents at Home</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>