sfSandBoxCode/force-app/main/default/objects/HouseHold__c/fields/Current_Occupant__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupant__c</fullName>
    <description>Name of current occupant</description>
    <label>Current Occupant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>