sfSandBoxCode/force-app/main/default/objects/HouseHold__c/fields/Dependents_Living_in_House__c.field-meta.xml
<CustomField>
    <fullName>Dependents_Living_in_House__c</fullName>
    <description>Number of dependents living in the house</description>
    <label>Dependents Living in House</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>