sfSandBoxCode/force-app/main/default/objects/HouseHold__c/fields/Dependents_over_14_years__c.field-meta.xml
<CustomField>
    <fullName>Dependents_over_14_years__c</fullName>
    <description>Number of dependents over 14 years living in the house</description>
    <label>Dependents over 14 Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>