sfSandBoxCode/force-app/main/default/objects/HouseHold__c/fields/Dependents_With_Disabilities__c.field-meta.xml
<CustomField>
    <fullName>Dependents_With_Disabilities__c</fullName>
    <description>Number of dependents with disabilities living in the house</description>
    <label>Dependents With Disabilities</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>