sfSandBoxCode/force-app/main/default/objects/HouseHold__c/fields/House_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Asset_Number__c</fullName>
    <label>House/Asset Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>