sfSandBoxCode/force-app/main/default/objects/HouseHold__c/fields/House_Label_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Label_Number__c</fullName>
    <description>House Label Number</description>
    <inlineHelpText>Number displayed on house</inlineHelpText>
    <label>House Label Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>