sfSandBoxCode/force-app/main/default/objects/HouseHold__c/fields/Teenage_Dependents_not_Schooling__c.field-meta.xml
<CustomField>
    <fullName>Teenage_Dependents_not_Schooling__c</fullName>
    <description>Teenage Dependents not schooling</description>
    <label>Teenage Dependents not Schooling</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>